--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -27,11 +27,10 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/TextAppearance.Title"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/lobster_two"
             android:text="@string/about_google_developer_groups"
-            android:textColor="#55555555"
-            android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@+id/end_grid"
             app:layout_constraintStart_toStartOf="@+id/start_grid"
             app:layout_constraintTop_toBottomOf="@id/image" />
@@ -50,10 +49,9 @@
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                style="@style/TextAppearance.Title"
                 android:text="@string/gdgs_are"
                 android:layout_marginTop="13dp"
-                android:textColor="#5555555"
-                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/start_grid"
                 app:layout_constraintEnd_toStartOf="@id/end_grid"
                 app:layout_constraintTop_toBottomOf="@+id/intro_text"/>
