Adding Material Design Attributes

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -37,7 +37,7 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.Title"
+            android:textAppearance="?textAppearanceHeadline5"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/lobster_two"
             android:text="@string/about_google_developer_groups"
@@ -59,7 +59,7 @@
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/TextAppearance.Title"
+                android:textAppearance="?textAppearanceHeadline6"
                 android:text="@string/gdgs_are"
                 android:layout_marginTop="13dp"
                 app:layout_constraintStart_toEndOf="@id/start_grid"
