--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -24,11 +24,11 @@
                     android:text="@string/add_gdg"
                     android:textColor="#AAAAAA"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart=""
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd=""
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop=""/>
 
             <ImageView
                     android:id="@+id/imageView"
@@ -121,7 +121,7 @@
             <!--android:orientation="vertical"-->
             <!--app:layout_constraintStart_toStartOf="@+id/EditTextRegion"-->
             <!--app:layout_constraintEnd_toEndOf="@+id/EditTextRegion"-->
-            <!--android:layout_marginTop="16dp"-->
+            <!--android:layout_marginTop=""-->
             <!--app:layout_constraintBottom_toTopOf="@+id/button"-->
             <!--android:layout_marginBottom="8dp">-->
 
@@ -130,7 +130,7 @@
                     android:text="@string/motivation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop=""
                     android:layout_marginStart="32dp"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                     android:layout_marginBottom="1dp"
