--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -38,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?textAppearanceHeadline5"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/spacing_normal"
             android:fontFamily="@font/lobster_two"
             android:text="@string/about_google_developer_groups"
             app:layout_constraintEnd_toStartOf="@+id/end_grid"
@@ -81,7 +81,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/spacing_normal"
                 app:srcCompat="@drawable/wtm"
                 app:layout_constraintTop_toBottomOf="@id/description"
                 app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
                 android:id="@+id/start_grid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintGuide_begin="16dp"
+                app:layout_constraintGuide_begin="@dimen/spacing_normal"
                 android:orientation="vertical"/>
 
         <androidx.constraintlayout.widget.Guideline
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/spacing_normal"
             app:srcCompat="@drawable/ic_gdg"
             android:onClick="@{() -> viewModel.onFabClicked()}"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
