--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -22,18 +22,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/add_gdg"
+                    android:contentDescription="@string/add_gdg"
                     android:textColor="#AAAAAA"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart=""
+                    android:layout_marginStart="@dimen/spacing_normal"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd=""
+                    android:layout_marginEnd="@dimen/spacing_normal"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop=""/>
+                    android:layout_marginTop="@dimen/spacing_normal"/>
 
             <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="411dp"
                     android:layout_height="230dp"
+                    android:contentDescription="@string/stage_image_description"
                     tools:src="@tools:sample/avatars"
                     app:srcCompat="@drawable/behind"
                     android:layout_marginTop="5dp"
@@ -48,6 +50,7 @@
                     android:id="@+id/EditTextName"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:contentDescription="@string/your_name_label"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
                     app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +65,7 @@
                     android:id="@+id/EditTextEmail"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:contentDescription="@string/email_label"
                     android:layout_marginTop="4dp"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextName"
                     app:layout_constraintStart_toStartOf="parent"
@@ -71,11 +75,13 @@
                     android:layout_marginBottom="4dp"
                     app:layout_constraintBottom_toTopOf="@+id/EditTextCity"
                     android:singleLine="true"/>
+
             <EditText
                     android:id="@+id/EditTextCity"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_marginTop="4dp"
+                    android:contentDescription="@string/city_label"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="32dp"
@@ -84,10 +90,12 @@
                     app:layout_constraintBottom_toTopOf="@+id/EditTextCountry"
                     android:layout_marginBottom="4dp"
                     android:singleLine="true"/>
+
             <EditText
                     android:id="@+id/EditTextCountry"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:hint="@string/country_label"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextCity"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="32dp"
@@ -97,10 +105,12 @@
                     app:layout_constraintBottom_toTopOf="@+id/EditTextRegion"
                     android:layout_marginTop="4dp"
                     android:singleLine="true"/>
+
             <EditText
                     android:id="@+id/EditTextRegion"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:hint="@string/region_label"
                     android:layout_marginTop="4dp"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextCountry"
                     app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +140,7 @@
                     android:text="@string/motivation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop=""
+                    android:layout_marginTop="@dimen/spacing_normal"
                     android:layout_marginStart="32dp"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                     android:layout_marginBottom="1dp"
@@ -143,6 +153,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
                     android:ems="10"
+                    android:hint="@string/enter_motivation"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -159,6 +170,7 @@
                     android:text="Ok"
                     android:layout_width="40dp"
                     android:layout_height="24dp"
+                    android:contentDescription="@string/submit_button_description"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextWhy"
